Fix note-content overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,7 +56,6 @@ body {
 }
 .notes-list {
   width: 100%;
-  max-height: 60vh;
 }
 
 .btn-unstyled {
@@ -107,7 +106,6 @@ body {
   color: var(--redish);
 }
 .note-content {
-  min-width: 100%;
   display: flex;
   flex-direction: column;
 }
